# cpptoml

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  biicode.conf  build_toml.cpp  cpptoml.pc.in  parse.cpp  parse_stdin.cpp
examples/: CMakeLists.txt  conversions.cpp  parse.cpp  parse_override.cpp  parse_stdin.cpp
include/: cpptoml.h
